linkedin_link_update

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             </li>
 
                             <li>
-                                <a class="linkedin" href="https://www.linkedin.com/in/toran-bahadur-niroula-ba4304216/"><i class="fa fa-linkedin"></i></a>
+                                <a class="linkedin" href="https://www.linkedin.com/in/toranbdrniroula/"><i class="fa fa-linkedin"></i></a>
                             </li>
 
                             <li>
