--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-     <meta content="max-width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 	 <link rel="stylesheet" href="css/font-awesome.min.css">
 	 
 <style>
@@ -49,7 +49,7 @@ body{
 	}
 	
 #wall{	
-	background-image:url(R.png);
+	background-image:url("R.png");
 	background-size:contain;
 	background-repeat: no-repeat;
 	position: absolute;
