--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body{
 	}
 	
 #wall{	
-	background-image:url("R.png");
+	background-image:url("images/R.png");
 	background-size:contain;
 	background-repeat: no-repeat;
 	position: absolute;
