--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
      <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	 <link rel="stylesheet" href="css/font-awesome.min.css">
+	<title>Toran Bahadur Niroula : Home
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 	 
 <style>
 * {
