--- a/literature/diary.html
+++ b/literature/diary.html
@@ -83,7 +83,7 @@ To leave behind the thing that you love most </br>
 And move to the void of the eternal peace</br>
 We disagree </br>
 She calls it beauty I call it truth</br>
-Yet She left her most loved boy behind </br>
+Yet She left her most loved ones behind </br>
 And this is the most beautiful truth I know</br></br>
 </p>
 </diary>
